tests/errors/lazy_pattern.ml
let unwrap (lazy value) = value
